<resources>
    <string name="app_name">Baddelni</string>
    <string name="don_t_have_account_sign_in_here">Don\'t have account Sign In Here</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="privacyText">By signing up, you agree to our Terms Of Use and Privacy Policy</string>
    <string name="sign_in">Sign In</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="categories">Categories</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="add_other">Add Other</string>
    <string name="create">Create</string>
    <string name="buyPost">Buy Post</string>
    <string name="deleteAll">Delete All</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="help_center">Help Center</string>
    <string name="about_app">About App</string>
    <string name="buy_post">Buy Post</string>
    <string name="advertise_with_us">Advertise with us</string>
    <string name="change_language">Change Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="interests">Interests</string>
    <string name="category">Category</string>
    <string name="addNew">New Add</string>
    <string name="buyNewPosts">Buy New Post</string>
    <string name="avaliablePosts">Available Posts</string>
    <string name="already_have_account_log_in_here">Already have account Log In Here</string>
    <string name="newPost">New Post</string>
    <string name="favorites">Favorites</string>
</resources>
