<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/fbCard"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:cardBackgroundColor="@color/fb_blue"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toTopOf="@+id/googleCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/fbCard"
            app:layout_constraintStart_toStartOf="@+id/fbCard"
            app:layout_constraintTop_toTopOf="@+id/fbCard"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/googleCard"
        android:layout_width="0dp"

        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toTopOf="@+id/emailCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/fbCard"
            app:layout_constraintStart_toStartOf="@+id/fbCard"
            app:layout_constraintTop_toTopOf="@+id/fbCard"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/google"
            android:textColor="@color/blackText"
            android:textSize="22sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/emailCard"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/fbCard"
            app:layout_constraintStart_toStartOf="@+id/fbCard"
            app:layout_constraintTop_toTopOf="@+id/fbCard"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/email_address"
            android:textColor="@color/blackText"
            android:textSize="22sp" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>